DAY-20 solve day 20